# MicYou

./: .gitignore  .mcp.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh-cn.md  CONTRIBUTING_zh-tw.md  README.md  README_TW.md  README_ZH.md  README_zh-cn.md  README_zh-tw.md  build.gradle.kts  gradle.properties  settings.gradle.kts  web.py
.codebuddy/: settings.local.json
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report_en.yaml  bug_report_zh-tw.yaml  config.yaml  config.yml  feature_request.yaml  feature_request_en.yaml  feature_request_zh-tw.yaml
.github/workflows/: development.yml  mirrorchyan_release.yml  mirrorchyan_release_note.yml  pre-release.yml  release.yml
.omg/state/: learn-watch.json
.qwen/: settings.json  settings.json.orig
buildSrc/: build.gradle.kts
composeApp/: build.gradle.kts  micyou.conf  proguard-desktop.pro  proguard-rules.pro
conductor/: migration_plan.md  review_aec.md
docs/: FAQ.md  FAQ_TW.md  FAQ_ZH.md
docs/plugin-api/: api-reference.md  (+1 more)
gradle/: libs.versions.toml
plugin-api/: build.gradle.kts
tauri-app/: AGENTS.md  Cargo.toml  generate_colors.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  sync-version.js  tailwind.config.js  vite.config.ts
tauri-app/crates/micyou-audio/: Cargo.toml
tauri-app/crates/micyou-audio/src/: aec.rs  dsp.rs  engine.rs  formats.rs  jitter.rs  lib.rs  loopback.rs  pipeline.rs
tauri-app/crates/micyou-audio/src/dsp/: agc.rs  buffer.rs  dereverb.rs  equalizer.rs  equalizer_config.rs  mod.rs  settings.rs  spectrum.rs  util.rs  vad.rs
tauri-app/crates/micyou-audio/src/dsp/noise/: dpdfnet.rs  lightweight.rs  mod.rs  purevox.rs  rnnoise.rs  speex.rs  ulunas.rs
tools/: vcam_helper.py
(+452 files in other folders)
