[package]
name = "micyou-audio"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["dsp"]
dsp = ["dep:nnnoiseless", "dep:ort", "dep:rustfft", "dep:ndarray"]
noise-suppression = ["dsp"]

[dependencies]
micyou-protocol = { path = "../micyou-protocol" }
serde = { version = "1", features = ["derive"] }
log = "0.4.32"
cpal = "0.15.3"
rubato = "3.0.0"
ringbuf = "0.3.3"

[target.'cfg(windows)'.dependencies]
wasapi = "0.16"

# DSP dependencies (optional)
nnnoiseless = { version = "0.5.2", optional = true }
ort = { version = "=2.0.0-rc.12", features = ["download-binaries", "coreml", "tls-rustls", "std", "ndarray", "api-17"], optional = true }
rustfft = { version = "6.4.1", optional = true }
ndarray = { version = "0.17", optional = true }
